--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"@automattic/calypso-color-schemes": "1.0.0",
 		"@automattic/custom-colors-loader": "automattic/custom-colors-loader",
 		"@automattic/format-currency": "1.0.0-alpha.0",
+		"@automattic/popup-monitor": "1.0.0",
 		"@automattic/viewport": "1.0.0",
 		"@babel/core": "7.8.4",
 		"@babel/preset-env": "7.8.4",
